cluster/apps/monitoring/kube-prometheus-stack/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    hajimari.io/icon: simple-icons:grafana
    hajimari.io/enable: true
    hajimari.io/appName: "Grafana"
    hajimari.io/group: "Monitoring"
spec:
  ingressClassName: traefik
  rules:
  - host: grafana.cleoverse.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
